Token gen, refresh, expiry and validation handled